# sonic_serve

./: README.md  main.py  pyproject.toml
src/api/: routes.py  schemas.py  server.py
src/cli/: check.py  main.py  serve.py
src/config/: default.yaml  loader.py
src/engine/: request.py  scheduler.py
src/model/: base.py  dummy.py  factory.py  pytorch_model.py
src/utils/: importing.py  logger.py
tests/: conftest.py  test_scheduler.py
